# Health-Chain-ICP

./: Cargo.toml  README.md  dfx.json
src/server/: Cargo.toml  server.did
src/server/src/: lib.rs
