[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18.3"
ic-cdk-macros = "0.18.3"
candid = "0.10"
ic-stable-structures = "0.7.0"
serde_json = "1.0.142"
serde = "1.0.219"
anyhow = "1.0.99"
lazy_static = "1.5.0"
ic-types = "0.7.0"
hex = "0.4.3"
# chrono = "0.4.41"
# jsonwebtoken = "9.3.1"
